# AgriMonitor-System

./: README.md  args.gn  build.ninja  build.ninja.d
applications/: README.md  bundle.json
applications/BearPi-HM_Nano/sample/: BUILD.gn
applications/BearPi-HM_Nano/sample/01-hello/: BUILD.gn  hello.c
applications/BearPi-HM_Nano/sample/02-led/: BUILD.gn  led_example.c
applications/BearPi-HM_Nano/sample/03-key_led/: BUILD.gn  key_led.c
applications/BearPi-HM_Nano/sample/04-kv_store/: BUILD.gn  kv_store.c
applications/BearPi-HM_Nano/sample/05-wifi_sta/: BUILD.gn  wifi_sta_connect.c
applications/BearPi-HM_Nano/sample/09-wifi-sta/: BUILD.gn  wifi_sta_connect.c
applications/BearPi-HM_Nano/sample/e53_ia1_smart_agriculture_sample/: BUILD.gn  button_app.c  iot_cloud_sample.c
applications/BearPi-HM_Nano/sample/e53_ia1_smart_agriculture_sample/include/: huawei_iot.h
applications/BearPi-HM_Nano/sample/e53_ia1_smart_agriculture_sample/nfc/: NT3H.c
applications/BearPi-HM_Nano/sample/e53_ia1_smart_agriculture_sample/src/: E53_IA1.c
