ohos_build_type = "release"
ohos_build_compiler_specified = "clang"
ohos_build_compiler_dir = "/home/gec/ohos_bundles/@ohos/llvm/llvm"
product_path = "/home/gec/vendor/bearpi/bearpi_hm_nano"
device_path = "/home/gec/device/bearpi/bearpi_hm_nano/sdk_liteos"
ohos_kernel_type = "liteos_m"
ohos_full_compile = true
